fix: swagger - add https and improve param types
